Fix responsive issue on Safari

--- a/src/Components/Interests/index.scss
+++ b/src/Components/Interests/index.scss
@@ -3,7 +3,12 @@
 .interests {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   height: 80%;
+}
+
+@media #{$large-screen} {
+  .interests {
+    justify-content: space-evenly;
+  }
 }
